Crash in [@ nsMessenger::SetWindow]
Categories
(Thunderbird :: General, defect)
Tracking
(thunderbird_esr78 affected)
Tracking | Status | |
---|---|---|
thunderbird_esr78 | --- | affected |
People
(Reporter: wsmwk, Assigned: mkmelin)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
Crash report: https://crash-stats.mozilla.org/report/index/424d275f-ecc5-4a5a-958b-e34d20210309
Reason: EXCEPTION_PRIV_INSTRUCTION
Top 10 frames of crashing thread:
0 xul.dll nsMessenger::SetWindow comm/mailnews/base/src/nsMessenger.cpp:268
1 xul.dll NS_InvokeByIndex
2 xul.dll static XPCWrappedNative::CallMethod js/xpconnect/src/XPCWrappedNative.cpp:1140
3 xul.dll XPC_WN_CallMethod js/xpconnect/src/XPCWrappedNativeJSOps.cpp:946
4 xul.dll js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:585
5 xul.dll Interpret js/src/vm/Interpreter.cpp:3312
6 xul.dll js::RunScript js/src/vm/Interpreter.cpp:465
7 xul.dll js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:620
8 xul.dll js::Call js/src/vm/Interpreter.cpp:665
9 xul.dll JS::Call js/src/jsapi.cpp:2845
Doesn't appear to be AV related.
All v78 crashes
Reporter | ||
Comment 1•4 years ago
|
||
I can easily reproduce this using 90.0b3 on Big Sur, closing Thunderbird with Master password prompt unanswered
bp-5928bf41-0055-4cfd-b539-84d020210701
bp-73415dd7-2f5c-472b-b4d8-dd4780210701
0 XUL nsMessenger::SetWindow(mozIDOMWindowProxy*, nsIMsgWindow*) comm/mailnews/base/src/nsMessenger.cpp:247 context
1 XUL NS_InvokeByIndex scan
2 XUL NS_InvokeByIndex scan
3 XUL XPCWrappedNative::CallMethod(XPCCallContext&, XPCWrappedNative::CallMode) js/xpconnect/src/XPCWrappedNative.cpp:1143 scan
4 XUL mozilla::dom::Window_Binding::get_window(JSContext*, JS::Handle<JSObject*>, void*, JSJitGetterCallArgs) dom/bindings/WindowBinding.cpp:659 scan
5 XUL js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason) js/src/vm/Interpreter.cpp:512 scan
6 XUL nsJARChannel::ContinueOpenLocalFile(nsJARInputThunk*, bool) modules/libjar/nsJARChannel.cpp:446 scan
7 XUL XPC_WN_CallMethod(JSContext*, unsigned int, JS::Value*) js/xpconnect/src/XPCWrappedNativeJSOps.cpp:922 scan
8 XUL js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason) js/src/vm/Interpreter.cpp:512 scan
9 XUL Interpret(JSContext*, js::RunState&) js/src/vm/Interpreter.cpp:3227 scan
10 XUL bool mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::NormalThisPolicy, mozilla::dom::binding_detail::ThrowExceptions>(JSContext*, unsigned int, JS::Value*) dom/bindings/BindingUtils.cpp:3298 scan
11 XUL js::EnvironmentIter::settle() js/src/vm/EnvironmentObject.cpp:1353 scan
Assignee | ||
Comment 2•4 years ago
|
||
Updated•4 years ago
|
Assignee | ||
Updated•4 years ago
|
Reporter | ||
Comment 3•4 years ago
|
||
We should check a week after the beta releases, whether this fixes some password crashes https://mzl.la/3Ay9Gs0
Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/b0613deb72f5
fix Crash in [@ nsMessenger::SetWindow]. r=benc
Description
•