Bug 1697307 - fix Crash in [@ nsMessenger::SetWindow]. r=benc

Differential Revision: https://phabricator.services.mozilla.com/D118998